# genius-x

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  NEXT_TODO.md  PROGRESS.md  README.md  START_PHASE1.md  TASKS.md  demo-start-no-proxy.sh  demo-start.sh  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/server/: README.md  package.json  tsconfig.json
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: DEFERRED.md  NEXT_SESSION.md  README.md  SESSION_SUMMARY.md  demo-live-guide.md  demo-testing-log.md  known-issues.md  migration-wsl2-to-mac.md  presentation.md
docs/agents/: README.md  REVIEW_BRIEF.md  _TASK_BRIEF.template.md
docs/architecture/: build-vs-reuse.md  capacity-and-latency.md  interaction-map.md  lesson-runtime.md  overview.md  scalable-architecture-v2.md
docs/archive/: NEXT_SESSION.md  README.md  SESSION_SUMMARY.md  START_PHASE1.md  TASKS.md  demo-quickstart.md  vpn-split-tunnel-config.md  wsl2-setup.md
docs/contracts/: README.md  agent-context.md  agent-session.md  ai-gateway.md  brand-style.md  client-server.md  course-engine.md  data-and-privacy.md  enrollment.md  identity.md  ip-character.md  parent-share.md  parent-surface.md  safety.md  scene.md  theme.md  tool.md  workspace.md  world.md
tools/: README.md  demo-e2e-multi-student.mjs  demo-e2e-test.mjs  enroll-student.mjs  make_arch_deck.cjs  make_arch_deck.py  package-lock.json  package.json  parent-link.mjs  pyproject.toml  test-shape-transition.mjs  wsl-port-forward.ps1
(+125 files in other folders)
